Fix alignment display bug in Safari browsers
There seems to be a display bug in Safari (checked in Windows) with
the monospace generic font family. This bug affects any Blast or
other tools where Alignments are displayed in <pre> tags.

--- a/public/stylesheets/styles_munich.css
+++ b/public/stylesheets/styles_munich.css
@@ -584,7 +584,7 @@ div.alignres {
 
 pre {
   font-size: 11px;
-  font-family: monospace;
+  font-family: Courier New,monospace;
   margin: 0;
   padding: 0;
 }
